[gd_scene load_steps=4 format=3 uid="uid://b4xio7vfe22bu"]

[ext_resource type="PackedScene" uid="uid://ds6yps5fvg45v" path="res://addons/ClickEffect/ClickSprite.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://blo1cwtda3klh" path="res://addons/ClickEffect/DrawForce.tscn" id="2"]
[ext_resource type="Script" path="res://addons/ClickEffect/ClickEffect.gd" id="3"]

[node name="ClickEffect" type="CanvasLayer"]
process_mode = 3
layer = 10
script = ExtResource("3")

[node name="AddEffectClick" type="Node2D" parent="."]
process_mode = 3

[node name="Sprite2D" parent="AddEffectClick" instance=ExtResource("1")]

[node name="DrawForce" parent="." instance=ExtResource("2")]

[node name="DrawForceAI" parent="." instance=ExtResource("2")]
checkAI = true

[node name="UINormal" type="Panel" parent="."]
visible = false
